--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,14 @@ body {
   height: 100vh;
   background-color: #75B0C2;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
