--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@ body {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
 }
 
